
Phoronix Test Suite 9.2.1
11 December 2019

pts-core: Fix for Debian packaging generator
pts-core: FIx for install script that could lead to Phoromatic Server instance not fully launching

Phoronix Test Suite 9.2.0-Hurdal
3 December 2019

pts-core: Fix for sensor-driven result outputs (e.g. power)
pts-core: Clean up precision handling on graphs
pts-core: Add Clear Linux external dependencies handling for when not relying upon the Clear bundles that include all known dependencies
phodevi: More robust ACPI power_meter handling
phodevi: Support reading the NVMe drive temperature via HWMON on Linux 5.5+
phoromatic: Use the new shared result viewer settings handling in common with the dynamic result viewer

Phoronix Test Suite 9.2.0 Milestone 2
13 November 2019

pts-core: Drop auto-compare sub-command since currently buggy / too server resource intensive
pts-core: Add FORCE_MIN_DURATION_PER_TEST
pts-core: Don't sort geometric mean results when the only difference between result identifiers is numeric in nature
pts-core: Allow preserving the precision of the original workload under test if not overriden by test profile
pts-core: Record and report CPU microcode version in benchmark result file
system_monitor: Allow multiple PERFORMANCE_PER_SENSOR= to be delimited by comma

Phoronix Test Suite 9.2.0 Milestone 1
17 October 2019

pts-core: New possible external dependencies for gflags, clang, uuid, tclsh
pts-core: External dependencies updates for Windows
pts-core: Crash fix for macOS in regression from PTS 9.0.1 launcher change

Phoronix Test Suite 9.0.1-Asker
1 October 2019

pts-core: Fatal error fix for old PHP5 versions (RHEL 7) with pts_openbenchmarking_upload crash
pts-core: Set AllowResultUploadsToOpenBenchmarking = FALSE in enterprise-setup
ob_auto_compare: Show "since [date]" as part of the inline box plot
ob_auto_compare: Various tweaks/styling improvements to the inline box-plot display