@@ -42,6 +42,7 @@ Phoronix Test Suite 9.2.0-Hurdal
 
 pts-core: Fix for sensor-driven result outputs (e.g. power)
 pts-core: Clean up precision handling on graphs
+pts-core: Add run-subset sub-command
 pts-core: Add Clear Linux external dependencies handling for when not relying upon the Clear bundles that include all known dependencies
 phodevi: More robust ACPI power_meter handling
 phodevi: Support reading the NVMe drive temperature via HWMON on Linux 5.5+
